useful for forking a production install into a development install (on the
same box) without duplicating all of your media files.  Requires `cp` from
GNU coreutils, so it will not work out of the box on BSD or OS X. [Marshall]

=item *

Added a C<--site> option to C<bric_dev_sync> to limit the templates and
elements that are synchronized to one site. [Marshall]

=back

=head2 Bug Fixes

=over

=item *

Fixed bug that resulted in an SQL error when trying to create a new
contributor group. Reported by Joe Pletcher. [David]

=item *

Fixed some foreign key constraints in the C<story_instance> and
C<template_instance> tables that improperly has C<ON DELETE SET NULL> clauses
on C<NOT NULL> columns. Reported by Andrei Arsu. [David]

=item *

The "Trail" link in the template profile works again. Spotted by Marshall.
[David]

=item *

If run as root, C<make clone> now C<chown>s the F<inst> directory to the
PostgreSQL user before becoming the PostgreSQL user, so that the user has
permission to create the F<inst/Pg.sql> file. [David]

=item *

C<make clone> no longer runs C<distclean>, and therefore no longer deletes
F<inst/Pg.sql>. It also creates the new F<Pg.sql> in the new distribution
directory, instead over replacing the existing F<Pg.sql>. [David]

=item *

Deleting categories via SOAP works again. Reported by Brad Harder. [David]

=item *

Fixed loading of deprecated classes so that older templates that still use
them will continue to work. [David]

=item *

Removed "Teaser" field from the story search interface, since there is no such
field, and so it did nothing, anyway. [David]

=item *

Publishing media documents that have had new files uploaded to them no longer
causes a publish failure. Reported by Christian Niles and numerous others.
[David]

=item *

Added even I<more> code to the C<inst/upgrade/1.8.9/fix_publish_status.pl>
upgrade script to better cover the possible variations in publish status
inaccuracies. [Alex Howarth, David]

=item *
